--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -144,7 +144,7 @@
 	
 	<body>
 	
-	<div class="container">
+	<div class="container testBG">
 		<div class="row">
 			<div class="col-lg-3 col-md-2"></div>
 			<div class="col-lg-6 col-md-8 login-box">
