--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
 		<meta name="description" content="Outils / Logiciels > RibéGroupe">
 		<meta name="msapplication-tap-highlight" content="no">
-		<link href="{{ asset('main.css') }}" rel="stylesheet">
+		<link href="{{ asset('css/main.css') }}" rel="stylesheet">
 		<link rel="icon" type="image/ico" href="{{ asset("images/societes/logo.ico") }}" />
 	</head>
 
