--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta http-equiv="Content-Language" content="en">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>RibéGroupe >
+		<title>Réseau Ribé >
 			{% block title %}{% endblock %}
 		</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, shrink-to-fit=no"/>
@@ -43,13 +43,6 @@
 			overflow-x: auto; 
 			width: 100%;
 		}
-
-		
-.app-header__logo .logo-src {
-    height: 23px;
-    width: 97px;
-    background: url({{ asset("images/societes/reseau_ribe.png") }})
-}
 
 	.backDIV{
 		background-color: lightgrey;
