--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
   		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>RIBEGROUPE > Connexion</title>
+		<title>Réseau Ribé > Connexion</title>
   
   		<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -149,10 +149,13 @@
 			<div class="col-lg-3 col-md-2"></div>
 			<div class="col-lg-6 col-md-8 login-box">
 				<div class="col-lg-12 login-key">
-					<i class="fa fa-key" aria-hidden="true"></i>
+					<img src="{{ asset("images/societes/logo.png") }}" width="30%" style="margin-top: 2%"/>
 				</div>
+				<br>
+				<br>
+				<br>
 				<div class="col-lg-12 login-title">
-					Outils RibéGroupe
+					Outils Réseau Ribé
 				</div>
 
 				<div class="col-lg-12 login-form">
