--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10104,7 +10104,7 @@ a, button, .btn {
 }
 
 .app-header.header-text-light .app-header__logo .logo-src {
-    background: url(images/logo.png)
+    background: url("../images/societes/reseau_ribe.png");
 }
 
 .app-header.header-text-light .app-header__mobile-menu .hamburger-inner, .app-header.header-text-light .app-header__mobile-menu .hamburger-inner::before, .app-header.header-text-light .app-header__mobile-menu .hamburger-inner::after {
@@ -10187,7 +10187,7 @@ a, button, .btn {
 }
 
 .app-header.header-text-dark .app-header__logo .logo-src {
-    background: url(images/logo-inverse.png)
+    background: url("../images/societes/reseau_ribe.png");
 }
 
 .app-sidebar {
@@ -10464,7 +10464,7 @@ a, button, .btn {
 }
 
 .app-sidebar.sidebar-text-light .app-header__logo .logo-src {
-    background: url(images/logo.png)
+    background: url("../images/societes/reseau_ribe.png");
 }
 
 .app-sidebar.sidebar-text-light .app-header__logo .hamburger-inner, .app-sidebar.sidebar-text-light .app-header__logo .hamburger-inner::before, .app-sidebar.sidebar-text-light .app-header__logo .hamburger-inner::after {
@@ -15641,8 +15641,8 @@ legend {
     font-family: 'Font Awesome 5 Free';
     font-style: normal;
     font-weight: 900;
-    src: url(fonts/fa-solid-900.eot);
-    src: url(fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(fonts/fa-solid-900.woff2) format("woff2"), url(fonts/fa-solid-900.woff) format("woff"), url(fonts/fa-solid-900.ttf) format("truetype"), url(fonts/fa-solid-900.svg#fontawesome) format("svg")
+    src: url(../fonts/fa-solid-900.eot);
+    src: url(../fonts/fa-solid-900.eot?#iefix) format("embedded-opentype"), url(../fonts/fa-solid-900.woff2) format("woff2"), url(../fonts/fa-solid-900.woff) format("woff"), url(../fonts/fa-solid-900.ttf) format("truetype"), url(../fonts/fa-solid-900.svg#fontawesome) format("svg")
 }
 
 .fa, .fas {
@@ -21185,8 +21185,8 @@ legend {
 
 @font-face {
     font-family: 'Pe-icon-7-stroke';
-    src: url(fonts/Pe-icon-7-stroke.eot);
-    src: url(fonts/Pe-icon-7-stroke.eot?#iefixd7yf1v) format("embedded-opentype"), url(fonts/Pe-icon-7-stroke.woff) format("woff"), url(fonts/Pe-icon-7-stroke.ttf) format("truetype"), url(fonts/Pe-icon-7-stroke.svg#Pe-icon-7-stroke) format("svg");
+    src: url(../fonts/Pe-icon-7-stroke.eot);
+    src: url(../fonts/Pe-icon-7-stroke.eot?#iefixd7yf1v) format("embedded-opentype"), url(../fonts/Pe-icon-7-stroke.woff) format("woff"), url(../fonts/Pe-icon-7-stroke.ttf) format("truetype"), url(../fonts/Pe-icon-7-stroke.svg#Pe-icon-7-stroke) format("svg");
     font-weight: normal;
     font-style: normal
 }
